--- a/crm_app/templates/crm/Leads/enquiry/lead_offcanvas_details.html
+++ b/crm_app/templates/crm/Leads/enquiry/lead_offcanvas_details.html
@@ -15,9 +15,145 @@
                     <p><strong>Contact:</strong> {{i.contact}}</p>
                 </div>
             </div>
+
+
+          <div class="container">
+            <div class="row h-100">
+                <div class="col-lg-4 col-md-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="d-flex align-items-center">
+                               
+                                <div class="flex-grow-1 ms-3  w-25">
+                                    <p class="text-uppercase fw-semibold fs-12 text-muted mb-1">Presales</p>
+                                    <h4 class=" mb-0"><span class="counter-value" data-target="2390.68">{{i.assign_to_employee.users.first_name }} {{i.assign_to_employee.users.last_name}}</span></h4>
+                                </div>
+                               
+                            </div>
+                        </div><!-- end card body -->
+                    </div><!-- end card -->
+                </div><!-- end col -->
+                <div class="col-lg-4 col-md-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="d-flex align-items-center">
+                                
+                                <div class="flex-grow-1 ms-3">
+                                    <p class="text-uppercase fw-semibold fs-12 text-muted mb-1">Assessment</p>
+                                    <h4 class=" mb-0"><span class="counter-value" data-target="19523.25">{{i.assign_to_assesment_employee.users.first_name }} {{i.assign_to_assesment_employee.users.last_name}}</span></h4>
+                                </div>
+                               
+                            </div>
+                        </div><!-- end card body -->
+                    </div><!-- end card -->
+                </div><!-- end col -->
+                <div class="col-lg-4 col-md-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="d-flex align-items-center">
+                               
+                                <div class="flex-grow-1 ms-3">
+                                    <p class="text-uppercase fw-semibold fs-12 text-muted mb-1">Sales</p>
+                                    <h4 class=" mb-0"><span class="counter-value" data-target="14799.44">{{i.assign_to_sales_employee.users.first_name }} {{i.assign_to_sales_employee.users.last_name}}</span></h4>
+                                </div>
+                                
+                            </div>
+                        </div><!-- end card body -->
+                    </div><!-- end card -->
+                </div><!-- end col -->
+            </div>
+            <div class="row h-100">
+                <div class="col-lg-4 col-md-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="d-flex align-items-center">
+                               
+                                <div class="flex-grow-1 ms-3  w-25">
+                                    <p class="text-uppercase fw-semibold fs-12 text-muted mb-1">Documentation
+                                    </p>
+                                    <h4 class=" mb-0"><span class="counter-value" data-target="2390.68">{{i.assign_to_documentation_employee.users.first_name }} {{i.assign_to_documentation_employee.users.last_name}}</span></h4>
+                                </div>
+                               
+                            </div>
+                        </div><!-- end card body -->
+                    </div><!-- end card -->
+                </div><!-- end col -->
+                <div class="col-lg-4 col-md-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="d-flex align-items-center">
+                                
+                                <div class="flex-grow-1 ms-3">
+                                    <p class="text-uppercase fw-semibold fs-12 text-muted mb-1"> Visa Team</p>
+                                    <h4 class=" mb-0"><span class="counter-value" data-target="19523.25">{{i.assign_to_visa_team_employee.users.first_name }} {{i.assign_to_visa_team_employee.users.last_name}}</span></h4>
+                                </div>
+                               
+                            </div>
+                        </div><!-- end card body -->
+                    </div><!-- end card -->
+                </div><!-- end col -->
+               
+            </div>
+            <div class="details-section mb-4">
+                <h5 >Lead Status: <span class="lead-status text-success">{{i.lead_status}}</span></h5>
+            </div>
+
+            <div>
+                <h5 class="text-secondary">Personal Details</h5>
+                <div class="mb-2 progress bg-secondary-subtle rounded-0" style="height: 2px;">
+                    <div class="progress-bar bg-secondary" role="progressbar" style="width: 100%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <p><strong>DOB:</strong> {{i.Dob}}</p>
+                <p><strong>Gender:</strong> {{i.Gender}}</p>
+                <p><strong>Marital Status:</strong> {{i.marital_status}}</p>
+            </div>
+            <div>
+                <h5 class="text-secondary">Passport Details</h5>
+                <div class="mb-2 progress bg-secondary-subtle rounded-0" style="height: 2px;">
+                    <div class="progress-bar bg-secondary" role="progressbar" style="width: 100%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <p><strong>Passport No.:</strong> {{i.passport_no}}</p>
+                <p><strong>Issue Date:</strong> {{i.issue_date}}</p>
+                <p><strong>Expiry Date:</strong> {{i.expirty_Date}}</p>
+                <p><strong>Issue Country:</strong> {{i.issue_country}}</p>
+                <p><strong>Birth Country:</strong> {{i.country_of_birth}}</p>
+            </div>
+            <div>
+                <h5 class="text-secondary">Visa Details</h5>
+                <div class="mb-2 progress bg-secondary-subtle rounded-0" style="height: 2px;">
+                    <div class="progress-bar bg-secondary" role="progressbar" style="width: 100%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <p><strong>Visa Country:</strong> {{i.Visa_country}}</p>
+                <p><strong>Visa Category:</strong> {{i.Visa_category}}</p>
+                <p><strong>Visa SubCategory:</strong> {{i.Visa_subcategory}}</p>
+                <p><strong>Visa Type:</strong> {{i.visa_type}}</p>
+            </div>
+            <div>
+                <h5 class="text-secondary">Product Details</h5>
+                <div class="mb-2 progress bg-secondary-subtle rounded-0" style="height: 2px;">
+                    <div class="progress-bar bg-secondary" role="progressbar" style="width: 100%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <p><strong>Product Name:</strong> {{i.Package}}</p>
+                <p><strong>Visa Amount:</strong> {{i.visa_amount}}</p>
+            </div>
+            <div>
+                <h5 class="text-secondary">Refusal Status</h5>
+                <div class="mb-2 progress bg-secondary-subtle rounded-0" style="height: 2px;">
+                    <div class="progress-bar bg-secondary" role="progressbar" style="width: 100%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <p>{% if i.refusal == True %}<strong>Yes</strong>{% else %}<strong>No</strong>{% endif %}</p>
+                {% if i.refusal == True %}
+                <p><strong>Refused Country:</strong> {{i.refusal_country}}</p>
+                {% endif %}
+            </div>
+          </div>
+
+         
+
+          
             
             <!-- Flexbox container to hold 5 divs in a row -->
-            <div class="d-flex flex-wrap justify-content-between">
+            {% comment %} <div class="d-flex flex-wrap justify-content-between">
                 <!-- Flex items -->
                 <div class="flex-item mb-3">
                     <div class="card  bg-success">
@@ -55,51 +191,13 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="d-flex flex-wrap justify-content-between  p-4">
-                <!-- Flex items -->
-                <div class="flex-item mb-3">
-                    <div class="card  bg-success">
-                        <div class="card-body">
-                            <p class="fw-medium text-white-50 mb-0">Presale</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="flex-item mb-3">
-                    <div class="card bg-success">
-                        <div class="card-body">
-                            <p class="fw-medium text-white-50 mb-0">Assessment</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="flex-item mb-3">
-                    <div class="card bg-success">
-                        <div class="card-body">
-                            <p class="fw-medium text-white-50 mb-0">Sales</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="flex-item mb-3">
-                    <div class="card bg-success">
-                        <div class="card-body">
-                            <p class="fw-medium text-white-50 mb-0">Documentation
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="flex-item mb-3">
-                    <div class="card bg-success">
-                        <div class="card-body">
-                            <p class="fw-medium text-white-50 mb-0">Visa Team</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            </div> {% endcomment %}
+           
             <!-- End of Flexbox layout -->
 
         </div>
     </div>
-    <div class="offcanvas-footer border p-3 text-center">
+    {% comment %} <div class="offcanvas-footer border p-3 text-center">
         <a href="javascript:void(0);" class="link-success">View All Activity <i class="ri-arrow-right-s-line align-middle ms-1"></i></a>
-    </div>
+    </div> {% endcomment %}
 </div>
