--- a/crm_app/templates/crm/Leads/all_lead.html
+++ b/crm_app/templates/crm/Leads/all_lead.html
@@ -59,7 +59,7 @@
 </style>
 {% for i in page_obj %}
 {% if i.archive == False %}
-<tr class="{% if i.color_code == 'Blue'  or i.color_code == 'Grey' or i.color_code == 'White' or i.color_code == 'Red' or i.color_code == 'Green' %}text-dark{% endif %}" style="background-color: {% if i.color_code == 'Grey' %}#efe5e5{% elif i.color_code == 'Blue' %}#89CFF0{% elif i.color_code == 'White' %}#FAF9F6{% elif i.color_code == 'Red' %}#ff9090{% elif i.color_code == 'Green' %}#9cc599{% else %}Transparent{% endif %};">
+<tr id="enquiry-{{ i.id }}" class="{% if i.color_code == 'Blue'  or i.color_code == 'Grey' or i.color_code == 'White' or i.color_code == 'Red' or i.color_code == 'Green' %}text-dark{% endif %}" style="background-color: {% if i.color_code == 'Grey' %}#efe5e5{% elif i.color_code == 'Blue' %}#89CFF0{% elif i.color_code == 'White' %}#FAF9F6{% elif i.color_code == 'Red' %}#ff9090{% elif i.color_code == 'Green' %}#9cc599{% else %}Transparent{% endif %};">
     {% comment %} <th scope="row">
        <div class="form-check">
           <input class="form-check-input" type="checkbox" name="checkAll" value="option1">
@@ -239,9 +239,21 @@
              </a>
           </li>
           <li class="list-inline-item" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-placement="top" title="Remove">
-             <a class="text-danger d-inline-block remove-item-btn" data-bs-toggle="modal" href="#deleteOrder">
+             <a class="text-danger d-inline-block remove-item-btn" data-bs-toggle="modal" href="javascript:void(0);" hx-delete="{% url 'delete_and_archive' i.id %}" 
+             hx-confirm="Do you want to delete ?" hx-target="#enquiry-{{ i.id }}"  hx-swap="outerHTML"  hx-headers='{"X-CSRFToken":"{{ csrf_token }}"}'>
              <i class="ri-delete-bin-5-fill fs-16"></i>
              </a>
+             {% comment %} <button class="btn btn-sm btn-danger remove-item-btn" 
+           hx-delete="{% url 'delete_visacountry' pk=country.pk %}" 
+           hx-confirm="Do you want to delete ?"
+           hx-target="#country-{{ country.pk }}"
+           hx-swap="outerHTML"
+           hx-headers='{"X-CSRFToken":"{{ csrf_token }}"}'>
+      Remove
+   </button>  {% endcomment %}
+             {% comment %} <a class="text-danger d-inline-block remove-item-btn" data-bs-toggle="modal" href="#deleteOrder">
+             <i class="ri-delete-bin-5-fill fs-16"></i>
+             </a> {% endcomment %}
           </li>
        </ul>
     </td>
